# WachcioDrop_AI

./: .gitignore  .gitmodules  CMakeLists.txt  build_spiffs.sh  partitions.csv  sdkconfig.defaults  setup.sh
Documentation/ESP32/API/: MQTT_API_EN.md
documentation/API/: MQTT_API_PL.md  REST_API_EN.md  REST_API_PL.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Tooltip.tsx
frontend/src/pages/: About.tsx  Dashboard.tsx  Groups.tsx  Logs.tsx  Schedule.tsx  Settings.tsx
main/: CMakeLists.txt  config.h  main.c
main/buttons/: buttons.c  buttons.h
main/daily_check/: daily_check.c  daily_check.h
main/display/: display.c  display.h  menu.c  menu.h
main/encoder/: encoder.c  encoder.h
main/groups/: groups.c  groups.h
main/leds/: leds.c  leds.h
main/logging/: log_manager.c  log_manager.h
main/mqtt/: mqtt_manager.c  mqtt_manager.h
main/ntp/: ntp.c  ntp.h
main/rtc/: rtc.c  rtc.h
main/schedule/: schedule.c  schedule.h
main/storage/: nvs_storage.c  nvs_storage.h
main/temperature/: temperature.c  temperature.h
main/valve/: valve.c  valve.h
main/webserver/: API.md  file_server.c  file_server.h  rest_api.c  rest_api.h
main/wifi/: captive_portal.c  captive_portal.h  wifi_manager.c  wifi_manager.h
